--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Программа для поиска курсов</h1>
+<div a>Направление подготовки</div>
+<div a>Цена</div>
+<div a>Вуз</div>
+<div a>Статус</div>
+<div>Найти доступные курсы</div>
+
 </body>
 </html>
